Fixes #144. Adds coalesced stats for coverage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,16 +17,16 @@
 
 stages:
   - test
-  - deploy
   - verify
-  - pages
+  - deploy
+  - post-deploy
 
 variables:
   DOCKER_DRIVER: "overlay2"
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
 
 include:
-  - local: "/gitlab/unittest.yml"
+  - local: "/gitlab/test.yml"
   - local: "/gitlab/analysis.yml"
   - local: "/gitlab/pages.yml"
   - local: "/gitlab/deploy.yml"
