--- a/gitlab/analysis.yml
+++ b/gitlab/analysis.yml
@@ -18,7 +18,7 @@
   image: python:3.8.1
   stage: test
   before_script:
-    - pip install nox
+    - bash tasks/retry-aborts.sh pip install nox
   only:
     - branches
     - merge_requests
@@ -28,19 +28,19 @@
 black:
   extends: .tools-base
   script:
-    - nox -s format -- --check --diff
+    - bash tasks/retry-aborts.sh nox -s format -- --check --diff
 
 bandit:
   extends: .tools-base
   script:
-    - nox -s sast
+    - bash tasks/retry-aborts.sh nox -s sast
 
 safety:
   extends: .tools-base
   script:
-    - nox -s safety
+    - bash tasks/retry-aborts.sh nox -s safety
 
 pylint:
   extends: .tools-base
   script:
-    - nox -s lint
+    - bash tasks/retry-aborts.sh nox -s lint
