Added dependency scanning job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,3 +30,4 @@ include:
   - local: "/gitlab/analysis.yml"
   - local: "/gitlab/pages.yml"
   - local: "/gitlab/deploy.yml"
+  - template: Dependency-Scanning.gitlab-ci.yml
