Split pip tests up into a git, sdist, and bdist_wheel locally, added manifest.mf and requirements.txts, removed requirements from setup.py

--- a/gitlab/test.yml
+++ b/gitlab/test.yml
@@ -40,11 +40,13 @@
   extends: .test-env
   stage: verify
   script:
-    - bash tasks/retry-aborts.sh nox -s pip
+    - apt install git -y
+    - bash tasks/retry-aborts.sh nox --sessions pip pip_sdist pip_bdist_wheel pip_git
 
 .nox-pip-install-showtime: &noxpipinstallshowtime
   extends: .test-env
   script:
+    - apt install git -y
     - bash tasks/retry-aborts.sh nox -s pip -- --showtime
   stage: post-deploy
   only:
