Enabled license management task.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,3 +31,4 @@ include:
   - local: "/gitlab/pages.yml"
   - local: "/gitlab/deploy.yml"
   - template: Dependency-Scanning.gitlab-ci.yml
+  - template: License-Management.gitlab-ci.yml
