Disables bandit CLi runner and enables GitLab SAST template which includes Bandit, GitLeaks, Trufflehog

--- a/gitlab/analysis.yml
+++ b/gitlab/analysis.yml
@@ -30,10 +30,11 @@ black:
   script:
     - bash tasks/retry-aborts.sh nox -s format -- --check --diff
 
-bandit:
-  extends: .tools-base
-  script:
-    - bash tasks/retry-aborts.sh nox -s sast
+### Now part of CI with GitLab extensions, also includes gitleaks and trufflehog
+# bandit:
+#   extends: .tools-base
+#   script:
+#     - bash tasks/retry-aborts.sh nox -s sast
 
 safety:
   extends: .tools-base
