--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,8 @@ stages:
 variables:
   DOCKER_DRIVER: "overlay2"
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  SAST_BANDIT_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
+  SAST_EXCLUDED_PATHS: tests/*,docs/*,gitlab/*,insomnia/*,public/*,tasks/*,noxfile.py
 
 include:
   - local: "/gitlab/test.yml"
@@ -31,5 +33,6 @@ include:
   - local: "/gitlab/pages.yml"
   - local: "/gitlab/deploy.yml"
   - template: "Dependency-Scanning.gitlab-ci.yml"
-  # TODO: add eventually, but this is currently really really slow :(
+  - template: "SAST.gitlab-ci.yml"
+  # TO DO: add eventually, but this is currently really really slow :(
   # - template: "License-Management.gitlab-ci.yml"
