Enabled pylint junit reports for GitLab

--- a/gitlab/analysis.yml
+++ b/gitlab/analysis.yml
@@ -45,3 +45,6 @@ pylint:
   extends: .tools-base
   script:
     - bash tasks/retry-aborts.sh nox -s lint
+  artifacts:
+    reports:
+      junit: public/pylint.xml
